build: add crates extension to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
 				"Swellaby.vscode-rust-test-adapter",
 				"bungcip.better-toml",
 				"Gruntfuggly.todo-tree",
-				"vadimcn.vscode-lldb"
+				"vadimcn.vscode-lldb",
+				"serayuzgur.crates"
 			]
 		}
 	}
